src/public/css/screens-css/battle.css
#battle-screen body{
    font-family: Verdana,serif;
}

#battle-screen #ready-button{
    border: 3px solid white;
    position: fixed;
    bottom: 15px;
    right: 20px;
}

#battle-screen #paused-indicator{
    position: fixed;
    top: 10px;
    left: 10px;

}

#battle-screen .button{
    opacity: 0.8;
}

#battle-screen .button:hover{
    opacity: 1;
}

#battle-screen #top-hud{
    position: fixed;
    top: 10px;
    left: 70px;
    font-size: 18pt;
}
#battle-screen #elapsed{
    color:white;
}

#battle-screen #turn-info{
    color: white;
}

#battle-screen #hp {
    color: limegreen;
}

#battle-screen #enemyHP {
    color: orangered;
}

#battle-screen #left-hud {
    position: fixed;
    top: 50px;
    left: 0;
}

#battle-screen #unit-portrait {
    border: 1px solid gray;
    background-color: #222;
    color: green;
}

#battle-screen #unit-orders ul{
}

#battle-screen #unit-orders li {
    list-style: none;
    border: 1px solid white;
    background-color: green;
    color: white;
    margin: 3px;
    padding: 3px;
}

#battle-screen #unit-orders li.sortable-placeholder {
    height: 23px;
    background-color: rgba(0,80,0,0.5);
    border-style: dotted;
}

#battle-screen #unit-orders li.sortable-dragging {

}

#battle-screen .delete-button {
    font-size: 13px;
    width: 20px;
    height: 20px;
    margin: 3px;
    border: lightgray solid 1px;
    color: lightgray;
    background-color: #520405;

    -webkit-border-radius: 20px;
    border-radius: 20px;
}

#battle-screen .delete-button:hover {
    background-color: #a91d1f;
    border-color: white;
    color: white;
}

